feature - redesign command pattern and added change password